--- a/Wpf_core_diploma/Pages/pgManagerSections/pgСontrollerAttendance.xaml
+++ b/Wpf_core_diploma/Pages/pgManagerSections/pgСontrollerAttendance.xaml
@@ -44,7 +44,7 @@
                             </Ellipse>
                             <Border CornerRadius="360" Height="60" Width="60">
                                 <Border.Background>
-                                    <ImageBrush ImageSource="C:\Users\hdnhd\source\repos\DIPloma1\Wpf_core_diploma\Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" Stretch="UniformToFill"/>
+                                    <ImageBrush ImageSource="\Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" Stretch="UniformToFill"/>
                                 </Border.Background>
                             </Border>
                         </Grid>
@@ -64,8 +64,17 @@
                     <Border.Background>
                         <SolidColorBrush Color="#FFFFFF" Opacity="0.5"/>
                     </Border.Background>
-
-                    <ListView Grid.Column="1" x:Name="lvDayWake" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                    <Grid>
+                        <Button x:Name="btRestartSelect" Click="clRestartSelect" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"
+                                VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5 5 0 0">
+                            <Button.Content>
+                                <StackPanel>
+                                    <materialDesign:PackIcon Kind="Restart" Foreground="#FFFFFF"/>
+                                </StackPanel>
+                            </Button.Content>
+                        </Button>
+                        
+                        <ListView Grid.Column="1" Margin="50 0 0 0" x:Name="lvDayWake" ScrollViewer.VerticalScrollBarVisibility="Disabled">
 
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
@@ -104,6 +113,8 @@
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
+                    </Grid>
+
 
                 </Border>
             </Grid>
@@ -132,7 +143,7 @@
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn>
+                            <DataGridTemplateColumn x:Name="clOptions">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel>
@@ -143,6 +154,18 @@
                             </DataGridTemplateColumn>
                             
                         </DataGrid.Columns>
+                        <DataGrid.GroupStyle>
+                            <GroupStyle>
+                                <GroupStyle.HeaderTemplate>
+                                    <DataTemplate>
+                                        <Border CornerRadius="7" Background="#D9D9D9" Margin="10 10 0 10" Height="26">
+                                            <TextBlock  FontSize="20" Margin="15 0 0 0" Foreground="#022D73" Height="50"
+                                                            Text="{Binding Name, StringFormat= D, ConverterCulture='ru-RU'}" />
+                                        </Border>
+                                    </DataTemplate>
+                                </GroupStyle.HeaderTemplate>
+                            </GroupStyle>
+                        </DataGrid.GroupStyle>
                     </DataGrid>
                 </Border>
                 <Border Margin="5" Grid.Column="1" CornerRadius="7">
@@ -164,7 +187,7 @@
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn>
+                            <DataGridTemplateColumn x:Name="clOptionsMark">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel>
