--- a/Wpf_core_diploma/Window/wdAddAttendance/wdAddAttendance.xaml
+++ b/Wpf_core_diploma/Window/wdAddAttendance/wdAddAttendance.xaml
@@ -66,9 +66,13 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
-                <Calendar Grid.Column="1" Margin="5"/>
+                <Calendar x:Name="calendar1" Grid.Column="1" Margin="5"/>
                 <Grid  Grid.Column="2">
-                    <DataGrid x:Name="dgListSelectStudent" Grid.Row="1" AutoGenerateColumns="False" Margin="5,5,5,5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="125*"/>
+                        <RowDefinition Height="13*"/>
+                    </Grid.RowDefinitions>
+                    <DataGrid x:Name="dgListSelectStudent" Grid.Row="0" AutoGenerateColumns="False" Margin="5,5,5,5">
                         <DataGrid.Columns>
                             <DataGridTemplateColumn IsReadOnly="True" Header="Ученик" Width="1*">
                                 <DataGridTemplateColumn.CellTemplate>
@@ -82,6 +86,16 @@
                             </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
+
+                    <Button Grid.Row="1" Click="clSaveList" materialDesign:ButtonAssist.CornerRadius="15" Margin="5 0 5 5 ">
+                        <Button.Content>
+                            <StackPanel Orientation="Horizontal" >
+                                <materialDesign:PackIcon Kind="Add" Foreground="#FFFFFF"/>
+                                <TextBlock Text="Добавить" Foreground="#FFFFFF"/>
+                            </StackPanel>
+                        </Button.Content>
+                    </Button>
+
                 </Grid>
             </Grid>
         </Border>
