--- a/Wpf_core_diploma/Pages/pgManagerSections/pgListSections.xaml
+++ b/Wpf_core_diploma/Pages/pgManagerSections/pgListSections.xaml
@@ -62,6 +62,12 @@
                                             <ImageBrush ImageSource="{Binding Icon, TargetNullValue={StaticResource photo}}" Stretch="UniformToFill"/>
                                         </Border.Background>
                                     </Border>
+                                    <Button VerticalAlignment="Top" HorizontalAlignment="Right" Width="40" Height="40" Margin="0 0 15 0" 
+                                            Style="{StaticResource MaterialDesignFloatingActionButton}">
+                                        <Button.Content>
+                                            <materialDesign:PackIcon Kind="Edit" Foreground="#FFFFFF"/>
+                                        </Button.Content>
+                                    </Button>
                                 </Grid>
                                 <TextBlock Text="{Binding NameSection}" FontSize="16" HorizontalAlignment="Center" Margin=" 0 20 0 0 " Foreground="#000000"/>
                             </StackPanel>
@@ -71,7 +77,7 @@
             </ListView>
 
         </Border>
-        <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 0 20 20">
+        <Button Click="clAddSections" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 0 20 20">
             <Button.Content>
                 <materialDesign:PackIcon Kind="Add" Foreground="#FFFFFF"/>
             </Button.Content>
