--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdStudentAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdStudentAddEntity.xaml
@@ -7,7 +7,7 @@
         
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="wdStudentAddEntity" Height="450" Width="800" ResizeMode="NoResize"
+        Title="Добавления" Height="450" Width="800" ResizeMode="NoResize"
         IsVisibleChanged="visibleChanged"
         >
     <Window.Resources>
