--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdTeacherAddEntity.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DIPloma.Window.wdAddUserEntity"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="wdTeacherAddEntity" Height="500" Width="800" ResizeMode="NoResize"
+        Title="Добавления" Height="500" Width="800" ResizeMode="NoResize"
         IsVisibleChanged="isVisibleChang1">
 
     <Window.Resources>
