--- a/Wpf_core_diploma/Window/wdAddAttendance/wdAddAttendance.xaml
+++ b/Wpf_core_diploma/Window/wdAddAttendance/wdAddAttendance.xaml
@@ -61,7 +61,11 @@
                             <DataGridTemplateColumn Header="выбрать" Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Click="clСhoose"/>
+                                        <Button Click="clСhoose" Style="{StaticResource MaterialDesignFloatingActionMiniButton}">
+                                            <Button.Content>
+                                                <materialDesign:PackIcon Kind="Arrow"/>
+                                            </Button.Content>
+                                        </Button>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -74,7 +78,7 @@
                         <RowDefinition Height="125*"/>
                         <RowDefinition Height="13*"/>
                     </Grid.RowDefinitions>
-                    <DataGrid x:Name="dgListSelectStudent" Grid.Row="0" AutoGenerateColumns="False" Margin="5,5,5,5">
+                    <DataGrid x:Name="dgListSelectStudent" Grid.Row="0" IsReadOnly="True" AutoGenerateColumns="False" Margin="5,5,5,5">
                         <DataGrid.Columns>
                             <DataGridTemplateColumn IsReadOnly="True" Header="Ученик" Width="1*">
                                 <DataGridTemplateColumn.CellTemplate>
@@ -86,6 +90,19 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
+
+                            <DataGridTemplateColumn Header="Удалить">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Click="clDel" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
+                                            <Button.Content>
+                                                <materialDesign:PackIcon Kind="Delete" Foreground="#FFFFFF"/>
+                                            </Button.Content>
+                                        </Button>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            
                         </DataGrid.Columns>
                     </DataGrid>
 
