--- a/Wpf_core_diploma/Window/wdAddUserEntity/wdStudentAddEntity.xaml
+++ b/Wpf_core_diploma/Window/wdAddUserEntity/wdStudentAddEntity.xaml
@@ -8,7 +8,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Добавления" Height="450" Width="800" ResizeMode="NoResize"
-        IsVisibleChanged="visibleChanged"
+        IsVisibleChanged="visibleChanged" FontSize="16"
         >
     <Window.Resources>
         <ResourceDictionary>
@@ -55,10 +55,10 @@
                             
                         </StackPanel>
                         <TextBox x:Name="tbSurName" TextChanged="tCangetSurName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding SurnameStudent}" materialDesign:HintAssist.Hint="Фамилия" materialDesign:HintAssist.HintOpacity="1"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27"
+                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" 
                      />
                         <TextBox x:Name="tbName" TextChanged="tChangedName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding NameStudent}" materialDesign:HintAssist.Hint="Имя" materialDesign:HintAssist.HintOpacity="1"
-                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 0 0 0"
+                     materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0 27"
                      />
                         <TextBox x:Name="tbDobleName" TextChanged="tChangetDobleName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding MiddleNameStudent}" materialDesign:HintAssist.Hint="Отчество" materialDesign:HintAssist.HintOpacity="1" 
                      materialDesign:HintAssist.FloatingOffset="0, -20" BorderBrush="#7C7C7C" BorderThickness="0 0 0 1.5" Margin="0"
